k8s/auth/pocket-id/resources/web-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: dot-config
          emptyDir: {}
        - name: dot-local
          emptyDir: {}
      containers:
        - name: pocket-id
          image: docker.io/stonith404/pocket-id:v0.23.0@sha256:73858025001bca20b60e1cf1324b3ffb142670622040293ecf5245e175da7997
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: volume
              mountPath: /app/backend/data
            - name: dot-config
              mountPath: /.config
            - name: dot-local
              mountPath: /.local
          ports:
            - name: http
              containerPort: 80
